# perception-layer

./: .gitignore  .mcp.json.example.md  README.md  _cooccur_test.txt  pyproject.toml  requirements.txt  run_mcp.py
config/: routing_rules.json  sensor_ignore.json
perception_layer/: cli.py  main.py  mcp_server.py  watchdog.py
perception_layer/bus/: bus.py  ring_buffer.py  routing.py
perception_layer/default_config/: sensor_ignore.json
perception_layer/engine/: debounce.py  engine.py
perception_layer/engine/rules/: __init__.py  base.py  edit_cluster.py  same_dir_comodify.py  same_path_burst.py  sensor_cooccur.py
perception_layer/interface/: perception_log.py
perception_layer/models/: __init__.py  event.py
perception_layer/sensors/: base.py  clock.py  fs_watch.py  git_sensor.py
tests/: test_bus.py  test_debounce.py  test_event_atomicity.py  test_git_integration.py  test_git_sensor.py  test_mcp_integration.py  test_ring_only_isolation.py  test_rules.py  test_sensor_cooccur.py
